trying to fix that black cutoff

--- a/css/one-page.css
+++ b/css/one-page.css
@@ -148,10 +148,9 @@ img:hover{
 }
 
 .games {
-
   background: url('image/cover.jpg') no-repeat center center fixed;
-
   background-clip: padding-box;
+  height: auto;
 }
 
 .art {
